--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,22 +1,20 @@
 modLoader="javafml"
-loaderVersion="[45,)"
+loaderVersion="[47,)"
 license="MIT License"
 
 [[mods]]
 modId="jewelcraft"
-version="1.3.4"
+version="1.4.0"
 displayName="Jewelcraft"
 credits="Jusey1, Burack"
 displayURL="https://discord.gg/s7QaYGUzZU"
 authors="Jusey1"
-description='''
-Craft & enchant your own jewelry...
-'''
+description="Craft & enchant your own jewelry..."
 
 [[dependencies.jewelcraft]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19.4]"
+    versionRange="[1.20.1]"
     ordering="NONE"
     side="BOTH"
 
