--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,10 +4,11 @@ license="MIT License"
 
 [[mods]]
 modId="jewelcraft"
-version="1.5.0"
+version="1.5.1"
 displayName="Jewelcraft"
 credits="Jusey1, Burack"
 displayURL="https://discord.gg/s7QaYGUzZU"
+logoFile="logo.png"
 authors="Jusey1"
 description="Craft & enchant your own jewelry..."
 
